--- a/default.css
+++ b/default.css
@@ -609,8 +609,9 @@ div#loginPage {
 }
 
 .manualLoginForm {
-  height: 100%;
-  width: 100%;
+    height: 0;
+    width: 0;
+    visibility: hidden;
 }
 
 #loginPage .inputContainer {
