Update and rename netflix_clone.css to netflix_copy.css

--- a/netflix_copy.css
+++ b/netflix_copy.css
@@ -614,6 +614,10 @@ div#loginPage {
     visibility: hidden;
 }
 
+.btnForgotPassword {
+   visibility: hidden;
+}
+
 #loginPage .inputContainer {
   background: #333;
   border-radius: var(--rounding);
